--- a/app/index.html
+++ b/app/index.html
@@ -12,88 +12,6 @@
     <link rel="stylesheet" href="styles/styles.css">
     <!-- endbuild -->
 
-    <!-- build:js({app,.tmp}) scripts/xdLocalStorage.min.js -->
-    <script src="scripts/services/xd-utils.js"></script>
-    <script src="scripts/xdLocalStorage.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js({app,.tmp}) scripts/xdLocalStoragePostMessageApi.min.js -->
-    <script src="scripts/services/xd-utils.js"></script>
-    <script src="scripts/xdLocalStoragePostMessageApi.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js({app,.tmp}) scripts/ng-xdLocalStorage.min.js -->
-    <script src="scripts/services/xd-utils.js"></script>
-    <script src="scripts/xdLocalStorage.js"></script>
-    <script src="scripts/ng-xdLocalStorage.js"></script>
-    <!-- endbuild -->
-
-    <script type="text/javascript">
-        xdLocalStorage.init(
-                {
-                    iframeUrl:'https://rawgit.com/ofirdagan/cross-domain-local-storage/master/app/views/cross-domain-local-storage.html',
-                    initCallback: function () {
-                        console.log('Got iframe ready');
-                        xdLocalStorage.setItem('check', 'no callback');
-                    }
-                }
-        );
-        function setValue () {
-            document.getElementById('result').innerHTML ='';
-            var key = document.getElementById("keyInput").value;
-            if(key) {
-                var value = document.getElementById("valueInput").value;
-                xdLocalStorage.setItem(key, value, function (data) {
-                    if(data.success) {
-                        document.getElementById('result').innerHTML = 'Your data has been successfully stored.';
-                    } else {
-                        document.getElementById('result').innerHTML = 'Ops, could not store your data.';
-                    }
-                });
-            } else {
-                alert('You must enter a key.');
-            }
-        }
-        function getItem () {
-            document.getElementById('result').innerHTML ='';
-            var key = document.getElementById("getInput").value;
-            if(key) {
-                xdLocalStorage.getItem(key, function (data) {
-                    document.getElementById('result').innerHTML = 'got value: "' + data.value + '" for key: "' + data.key + '"';
-                });
-            } else {
-                alert('You must enter a key to get.');
-            }
-        }
-        function removeItem () {
-            document.getElementById('result').innerHTML ='';
-            var key = document.getElementById("removeInput").value;
-            if(key) {
-                xdLocalStorage.removeItem(key, function (data) {
-                    document.getElementById('result').innerHTML = 'Key was removed';
-                });
-            } else {
-                alert('You must enter a key to remove.');
-            }
-        }
-        function keyName () {
-            document.getElementById('result').innerHTML ='';
-            var index = document.getElementById("keyNameInput").value;
-            if(index) {
-                xdLocalStorage.key(index, function (data) {
-                    document.getElementById('result').innerHTML = 'Key name for index ' + index + ' is: '+data.key;
-                });
-            } else {
-                alert('You must enter a key index.');
-            }
-        }
-        function clearAll () {
-            document.getElementById('result').innerHTML ='';
-            xdLocalStorage.clear(function (data) {
-                document.getElementById('result').innerHTML = 'LocalStorage was cleared.';
-            });
-        }
-    </script>
 </head>
 <body>
 <!--[if lt IE 10]>
@@ -125,5 +43,76 @@
     ga('create','UA-XXXXX-X');ga('send','pageview');
 </script>
 
+    <script type="text/javascript">
+      var ns = 'ls';
+      window.onload = function() {
+        var p = xdLocalStorage.init(
+                {
+                    iframeUrl:'https://rawgit.com/ofirdagan/cross-domain-local-storage/master/app/views/cross-domain-local-storage.html',
+                    initCallback: function (data) {
+                        console.log('Got iframe ready: ns=' +  data.ns);
+                        xdLocalStorage.setItem(data.ns, 'check', 'no callback');
+                    },
+                    nameSpace: 'ls'
+                }
+        );
+        p.then( () => xdLocalStorageEmbedded.init("ls") );
+      };
+        function setValue () {
+            document.getElementById('result').innerHTML ='';
+            var key = document.getElementById("keyInput").value;
+            if(key) {
+                var value = document.getElementById("valueInput").value;
+                xdLocalStorage.setItem(ns, key, value, function (data) {
+                    if(data.success) {
+                        document.getElementById('result').innerHTML = 'Your data has been successfully stored.';
+                    } else {
+                        document.getElementById('result').innerHTML = 'Ops, could not store your data.';
+                    }
+                });
+            } else {
+                alert('You must enter a key.');
+            }
+        }
+        function getItem () {
+            document.getElementById('result').innerHTML ='';
+            var key = document.getElementById("getInput").value;
+            if(key) {
+                xdLocalStorage.getItem(ns, key, function (data) {
+                    document.getElementById('result').innerHTML = 'got value: "' + data.value + '" for key: "' + data.key + '"';
+                });
+            } else {
+                alert('You must enter a key to get.');
+            }
+        }
+        function removeItem () {
+            document.getElementById('result').innerHTML ='';
+            var key = document.getElementById("removeInput").value;
+            if(key) {
+                xdLocalStorage.removeItem(ns, key, function (data) {
+                    document.getElementById('result').innerHTML = 'Key was removed';
+                });
+            } else {
+                alert('You must enter a key to remove.');
+            }
+        }
+        function keyName () {
+            document.getElementById('result').innerHTML ='';
+            var index = document.getElementById("keyNameInput").value;
+            if(index) {
+                xdLocalStorage.key(ns, index, function (data) {
+                    document.getElementById('result').innerHTML = 'Key name for index ' + index + ' is: '+data.key;
+                });
+            } else {
+                alert('You must enter a key index.');
+            }
+        }
+        function clearAll () {
+            document.getElementById('result').innerHTML ='';
+            xdLocalStorage.clear(ns, function (data) {
+                document.getElementById('result').innerHTML = 'LocalStorage was cleared.';
+            });
+        }
+    </script>
 </body>
 </html>
