--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
       window.onload = function() {
         var p = xdLocalStorage.init(
                 {
-                    iframeUrl:'https://rawgit.com/ofirdagan/cross-domain-local-storage/master/app/views/cross-domain-local-storage.html',
+                    iframeUrl:'https://cdn.rawgit.com/fantajeon/cross-domain-local-storage/5bb67794/app/views/cross-domain-local-storage.html',
                     initCallback: function (data) {
                         console.log('Got iframe ready: ns=' +  data.ns);
                         xdLocalStorage.setItem(data.ns, 'check', 'no callback');
