modify test files

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
                         console.log('Got iframe ready: ns=' +  data.ns);
                         xdLocalStorage.setItem(data.ns, 'check', 'no callback');
                     },
-                    nameSpace: 'ls1'
+                    nameSpace: 'ls1.domain'
                 }
         );
         xdLocalStorage.init(
@@ -64,7 +64,7 @@
                         console.log('Got iframe ready: ns=' +  data.ns);
                         xdLocalStorage.setItem(data.ns, 'check', 'no callback');
                     },
-                    nameSpace: 'ls2'
+                    nameSpace: 'ls2.domain'
                 }
         );
 
